--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@
   box-sizing: border-box;
   padding-left: 16px;
 }
+.textwidget ul.clothes-listing {
+  padding-left: 0;
+}
 .textwidget ul li {
   margin-bottom: 12px;
 }
@@ -73,6 +76,12 @@
   box-sizing: border-box;
   width: 33.3333%;
   float: left;
+}
+@media (max-width: 780px) {
+  .widget_siteorigin-panels-postloop .home-post {
+    float: none;
+    width: 100%;
+  }
 }
 .widget_siteorigin-panels-postloop .home-post .wp-post-image {
   margin-bottom: 37px;
